tests/asm-link/assert-nosect-bank/rgbasm.err
error: PC doesn't have a bank outside of a section
   ╭─[ test.asm:1:8 ]
   │
 1 │ assert BANK(@) == 1
   │        ───┬───  
   │           ╰───── this symbol is invalid
───╯
1 error generated.
